--- a/PCSX2_Configurator.Core/PCSX2_Configurator.Core.csproj
+++ b/PCSX2_Configurator.Core/PCSX2_Configurator.Core.csproj
@@ -17,7 +17,7 @@
     <PackageReference Include="NaturalSort.Extension" Version="2.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.0-rc0001" />
-    <PackageReference Include="Squid-Box.SevenZipSharp.NoSfx" Version="1.3.283" />
+    <PackageReference Include="Squid-Box.SevenZipSharp" Version="1.3.283" />
   </ItemGroup>
 
   <ItemGroup>
